crates/nash-codegen/src/snapshots/nash_codegen__constant_sharing_tests__first_literal_only.snap
---
source: crates/nash-codegen/src/constant_sharing_tests.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
[[(builtin appendByteString)
  [[[(builtin sliceByteString) (con integer 1)] (con integer 2)]
    (con bytestring #01020304)]]
  [[[(builtin sliceByteString) (con integer 1)] (con integer 3)]
    (con bytestring #01020304)]]
--- uplc after
[(lam partial_1
  [[(builtin appendByteString)
    [[partial_1 (con integer 2)] (con bytestring #01020304)]]
    [[partial_1 (con integer 3)] (con bytestring #01020304)]])
  [(builtin sliceByteString) (con integer 1)]]
--- result
(con bytestring #0203020304)
--- logs
[]
