crates/nash-codegen/src/snapshots/nash_codegen__constant_sharing_tests__polymorphic.snap
---
source: crates/nash-codegen/src/constant_sharing_tests.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
[(lam builtin_1
  (case
    (force [[builtin_1 (con string "same")] (delay (con bool True))])
    (con integer 0)
    (force [[builtin_1 (con string "same")] (delay (con integer 42))])))
  (force (builtin trace))]
--- uplc after
[(lam builtin_1
  [(lam partial_2
    (case
      (force [partial_2 (delay (con bool True))])
      (con integer 0)
      (force [partial_2 (delay (con integer 42))])))
    [builtin_1 (con string "same")]])
  (force (builtin trace))]
--- result
(con integer 42)
--- logs
["same", "same"]
