crates/nash-codegen/src/snapshots/nash_codegen__constant_sharing_tests__repeated.snap
---
source: crates/nash-codegen/src/constant_sharing_tests.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
[(lam builtin_1
  [[(builtin addInteger)
    [[(builtin subtractInteger) (con integer 100)]
      (force [[builtin_1 (con string "left")] (delay (con integer 1))])]]
    [[(builtin subtractInteger) (con integer 100)]
      (force [[builtin_1 (con string "right")] (delay (con integer 2))])]])
  (force (builtin trace))]
--- uplc after
[(lam builtin_1
  [(lam partial_2
    [[(builtin addInteger)
      [partial_2 (force [[builtin_1 (con string "left")] (delay (con integer 1))])]]
      [partial_2 (force [[builtin_1 (con string "right")] (delay (con integer 2))])]])
    [(builtin subtractInteger) (con integer 100)]])
  (force (builtin trace))]
--- result
(con integer 197)
--- logs
["left", "right"]
